--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-preset-es2016": "~6.24.1",
     "bootstrap": "^4.0.0-beta",
     "chart.js": "2.6.0",
+    "compression-webpack-plugin": "^1.1.3",
     "font-awesome": "^4.7.0",
     "google-maps-react": "^1.1.0",
     "history": "4.6.3",
